--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.34",
-    "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-router": "^5.1.20",
     "react": "^18.2.0",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.9"
   }
 }
