--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.9"
+    "@types/react": "^18.2.9",
+    "gh-pages": "^5.0.0"
   }
 }
