--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.12.0",
-    "react-scripts": "^5.0.1",
     "react-type-animation": "^3.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -49,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.9"
+    "@types/react": "^18.2.9",
+    "react-scripts": "^5.0.1"
   }
 }
