--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.1"
   }
 }
