removed the /wesbite/ prefix in the router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://juanlucasumali.github.io/website",
+  "homepage": "https://www.juanlucasumali.com/",
   "name": "website",
   "version": "0.1.0",
   "private": true,
